tests/error/array_errors/new_array_cannot_infer.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy
def main() -> None:
    xs = array()


guppy.compile(main)