tests/error/array_errors/new_array_cannot_infer.err
Error: Cannot infer type (at $FILE:7:9)
  | 
5 | @guppy
6 | def main() -> None:
7 |     xs = array()
  |          ^^^^^^^ Cannot infer the type of this array

Note: Consider adding a type annotation: `x: array[???] = ...`

Guppy compilation failed due to 1 previous error
